Move file loading to absolute path
This was done to allow the html file to be run from other sites without having to download all the extra files

--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
   <head>
     <title>Retro Bowl - Play Unblocked Game</title>
-    <link href="assets/css/vendor.min.css" rel="stylesheet" />
-    <link href="assets/css/app.css" rel="stylesheet" />
+    <link
+      href="https://haha64142.github.io/Retro-Bowl/assets/css/vendor.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://haha64142.github.io/Retro-Bowl/assets/css/app.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="wrapper">
       <div class="gm4html5_div_class" id="gm4html5_div_id">
         <img
-          src="html5game/splash.png"
+          src="https://haha64142.github.io/Retro-Bowl/html5game/splash.png"
           id="GM4HTML5_loadingscreen"
           alt="GameMaker:HTML5 loading screen"
           style="display: none; position: absolute"
@@ -21,7 +27,10 @@
       </div>
 
       <!-- Run the game code -->
-      <script type="text/javascript" src="html5game/RetroBowl.js?"></script>
+      <script
+        type="text/javascript"
+        src="https://haha64142.github.io/Retro-Bowl/html5game/RetroBowl.js"
+      ></script>
       <script>
         window.onload = GameMaker_Init;
       </script>
