--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Retro Bowl - Play Unblocked Game</title>
+    <title>Retro Bowl</title>
     <link
       href="https://haha64142.github.io/Retro-Bowl/assets/css/vendor.min.css"
       rel="stylesheet"
