Convert github urls to jsdelivr to work even if github is blocked

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <title>Retro Bowl</title>
     <link
-      href="https://haha64142.github.io/Retro-Bowl/assets/css/vendor.min.css"
+      href="https://cdn.jsdelivr.net/gh/haha64142/retro-bowl@main/assets/css/vendor.min.css"
       rel="stylesheet"
     />
     <link
-      href="https://haha64142.github.io/Retro-Bowl/assets/css/app.css"
+      href="https://cdn.jsdelivr.net/gh/haha64142/retro-bowl@main/assets/css/app.css"
       rel="stylesheet"
     />
   </head>
@@ -23,7 +23,7 @@
       <!-- Run the game code -->
       <script
         type="text/javascript"
-        src="https://haha64142.github.io/Retro-Bowl/html5game/RetroBowl.js"
+        src="https://cdn.jsdelivr.net/gh/haha64142/retro-bowl@main/html5game/RetroBowl.js"
       ></script>
       <script>
         window.onload = GameMaker_Init;
